--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <section>
         <h1>Reporte de Productos</h1>
+        <br>
+        <h3>Producto Mas Vendido:       producto 3</h3>
+        <h3>Producto Menos Vendido:     producto 2 </h3>
+        <br>
         <div class="tbl-header">
             <table cellpadding="0" cellspacing="0" border="0">
                 <thead>
@@ -23,14 +27,31 @@
         </div>
         <div class="tbl-content">
             <table cellpadding="0" cellspacing="0" border="0">
-                <tbody>
+                <tbody> 
                     <tr>
-                        <td>AAC</td>
-                        <td>AUSTRALIAN COMPANY </td>
-                        <td>$1.38</td>
-                        <td>+2.01</td>
-                    </tr>
-                </tbody>
+                        <td>producto 3</td>
+                        <td>15.0</td>
+                        <td>170.0</td>
+                        <td>2550.0</td>
+                    </tr> 
+                    <tr>
+                        <td>producto 1</td>
+                        <td>25.55</td>
+                        <td>33.0</td>
+                        <td>843.15</td>
+                    </tr> 
+                    <tr>
+                        <td>producto 4</td>
+                        <td>50.0</td>
+                        <td>13.0</td>
+                        <td>650.0</td>
+                    </tr> 
+                    <tr>
+                        <td>producto 2</td>
+                        <td>35.75</td>
+                        <td>10.0</td>
+                        <td>357.5</td>
+                    </tr>        </tbody>
             </table>
         </div>
     </section>
