--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Reporte</title>
     <meta http-equiv=Content-Type content=text/html; charset=UTF-8>
-    <link href="src/style.css" rel="stylesheet" type="text/css">
-    <script src="src/script.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <script src="script.js"></script>
 </head>
+
 <body>
     <section>
         <h1>Reporte de Productos</h1>
         <br>
-        <h3>Producto Mas Vendido:       producto 3</h3>
-        <h3>Producto Menos Vendido:     producto 2 </h3>
+        <h3>Producto Mas Vendido: producto 3</h3>
+        <h3>Producto Menos Vendido: producto 2 </h3>
         <br>
         <div class="tbl-header">
             <table cellpadding="0" cellspacing="0" border="0">
@@ -27,35 +29,37 @@
         </div>
         <div class="tbl-content">
             <table cellpadding="0" cellspacing="0" border="0">
-                <tbody> 
+                <tbody>
                     <tr>
                         <td>producto 3</td>
                         <td>15.0</td>
                         <td>170.0</td>
                         <td>2550.0</td>
-                    </tr> 
+                    </tr>
                     <tr>
                         <td>producto 1</td>
                         <td>25.55</td>
                         <td>33.0</td>
                         <td>843.15</td>
-                    </tr> 
+                    </tr>
                     <tr>
                         <td>producto 4</td>
                         <td>50.0</td>
                         <td>13.0</td>
                         <td>650.0</td>
-                    </tr> 
+                    </tr>
                     <tr>
                         <td>producto 2</td>
                         <td>35.75</td>
                         <td>10.0</td>
                         <td>357.5</td>
-                    </tr>        </tbody>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </section>
     <div class="made-with-love">
         Abner Martín Noj Hernández - 201801027
 </body>
+
 </html>
