--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <title>Reporte</title>
     <meta http-equiv=Content-Type content=text/html; charset=UTF-8>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="script.js"></script>
 </head>
-
 <body>
     <section>
         <h1>Reporte de Productos</h1>
         <br>
-        <h3>Producto Mas Vendido: producto 3</h3>
-        <h3>Producto Menos Vendido: producto 2 </h3>
+        <h3>Producto Mas Vendido:       aerified0</h3>
+        <h3>Producto Menos Vendido:     konklab0 </h3>
         <br>
         <div class="tbl-header">
             <table cellpadding="0" cellspacing="0" border="0">
@@ -29,37 +27,305 @@
         </div>
         <div class="tbl-content">
             <table cellpadding="0" cellspacing="0" border="0">
-                <tbody>
+                <tbody> 
                     <tr>
-                        <td>producto 3</td>
-                        <td>15.0</td>
+                        <td>aerified0</td>
+                        <td>486.97</td>
+                        <td>449.0</td>
+                        <td>218649.53</td>
+                    </tr> 
+                    <tr>
+                        <td>ventosanzap0</td>
+                        <td>426.15</td>
+                        <td>471.0</td>
+                        <td>200716.65</td>
+                    </tr> 
+                    <tr>
+                        <td>tin0</td>
+                        <td>418.75</td>
+                        <td>461.0</td>
+                        <td>193043.75</td>
+                    </tr> 
+                    <tr>
+                        <td>kanlam0</td>
+                        <td>490.75</td>
+                        <td>367.0</td>
+                        <td>180105.25</td>
+                    </tr> 
+                    <tr>
+                        <td>quo lux0</td>
+                        <td>421.26</td>
+                        <td>427.0</td>
+                        <td>179878.02</td>
+                    </tr> 
+                    <tr>
+                        <td>lotlux0</td>
+                        <td>361.46</td>
+                        <td>491.0</td>
+                        <td>177476.86</td>
+                    </tr> 
+                    <tr>
+                        <td>daltfresh0</td>
+                        <td>316.08</td>
+                        <td>447.0</td>
+                        <td>141287.75999999998</td>
+                    </tr> 
+                    <tr>
+                        <td>home ing0</td>
+                        <td>326.08</td>
+                        <td>378.0</td>
+                        <td>123258.23999999999</td>
+                    </tr> 
+                    <tr>
+                        <td>namfix0</td>
+                        <td>468.64</td>
+                        <td>235.0</td>
+                        <td>110130.4</td>
+                    </tr> 
+                    <tr>
+                        <td>zathin0</td>
+                        <td>288.17</td>
+                        <td>370.0</td>
+                        <td>106622.90000000001</td>
+                    </tr> 
+                    <tr>
+                        <td>ventosanzap0</td>
+                        <td>472.63</td>
+                        <td>212.0</td>
+                        <td>100197.56</td>
+                    </tr> 
+                    <tr>
+                        <td>overhold0</td>
+                        <td>232.93</td>
+                        <td>401.0</td>
+                        <td>93404.93000000001</td>
+                    </tr> 
+                    <tr>
+                        <td>cardguard0</td>
+                        <td>361.88</td>
+                        <td>240.0</td>
+                        <td>86851.2</td>
+                    </tr> 
+                    <tr>
+                        <td>zontrax0</td>
+                        <td>370.8</td>
+                        <td>226.0</td>
+                        <td>83800.8</td>
+                    </tr> 
+                    <tr>
+                        <td>quo lux0</td>
+                        <td>390.79</td>
+                        <td>200.0</td>
+                        <td>78158.0</td>
+                    </tr> 
+                    <tr>
+                        <td>namfix0</td>
+                        <td>264.74</td>
+                        <td>282.0</td>
+                        <td>74656.68000000001</td>
+                    </tr> 
+                    <tr>
+                        <td>viva0</td>
+                        <td>192.31</td>
+                        <td>340.0</td>
+                        <td>65385.4</td>
+                    </tr> 
+                    <tr>
+                        <td>fix san0</td>
+                        <td>204.07</td>
+                        <td>301.0</td>
+                        <td>61425.07</td>
+                    </tr> 
+                    <tr>
+                        <td>sonsing0</td>
                         <td>170.0</td>
-                        <td>2550.0</td>
-                    </tr>
+                        <td>354.0</td>
+                        <td>60180.0</td>
+                    </tr> 
                     <tr>
-                        <td>producto 1</td>
-                        <td>25.55</td>
-                        <td>33.0</td>
-                        <td>843.15</td>
-                    </tr>
+                        <td>voltsillam0</td>
+                        <td>485.29</td>
+                        <td>117.0</td>
+                        <td>56778.93</td>
+                    </tr> 
                     <tr>
-                        <td>producto 4</td>
-                        <td>50.0</td>
-                        <td>13.0</td>
-                        <td>650.0</td>
-                    </tr>
+                        <td>flexidy0</td>
+                        <td>225.6</td>
+                        <td>242.0</td>
+                        <td>54595.2</td>
+                    </tr> 
                     <tr>
-                        <td>producto 2</td>
-                        <td>35.75</td>
-                        <td>10.0</td>
-                        <td>357.5</td>
-                    </tr>
-                </tbody>
+                        <td>tres-zap0</td>
+                        <td>131.5</td>
+                        <td>410.0</td>
+                        <td>53915.0</td>
+                    </tr> 
+                    <tr>
+                        <td>home ing0</td>
+                        <td>160.35</td>
+                        <td>301.0</td>
+                        <td>48265.35</td>
+                    </tr> 
+                    <tr>
+                        <td>sub-ex0</td>
+                        <td>97.64</td>
+                        <td>466.0</td>
+                        <td>45500.24</td>
+                    </tr> 
+                    <tr>
+                        <td>otcom0</td>
+                        <td>323.97</td>
+                        <td>133.0</td>
+                        <td>43088.01</td>
+                    </tr> 
+                    <tr>
+                        <td>regrant0</td>
+                        <td>289.51</td>
+                        <td>128.0</td>
+                        <td>37057.28</td>
+                    </tr> 
+                    <tr>
+                        <td>greenlam0</td>
+                        <td>168.75</td>
+                        <td>208.0</td>
+                        <td>35100.0</td>
+                    </tr> 
+                    <tr>
+                        <td>biodex0</td>
+                        <td>189.06</td>
+                        <td>182.0</td>
+                        <td>34408.92</td>
+                    </tr> 
+                    <tr>
+                        <td>cardguard0</td>
+                        <td>275.74</td>
+                        <td>118.0</td>
+                        <td>32537.32</td>
+                    </tr> 
+                    <tr>
+                        <td>flowdesk0</td>
+                        <td>77.16</td>
+                        <td>408.0</td>
+                        <td>31481.28</td>
+                    </tr> 
+                    <tr>
+                        <td>prodder0</td>
+                        <td>232.88</td>
+                        <td>130.0</td>
+                        <td>30274.399999999998</td>
+                    </tr> 
+                    <tr>
+                        <td>it0</td>
+                        <td>113.43</td>
+                        <td>265.0</td>
+                        <td>30058.95</td>
+                    </tr> 
+                    <tr>
+                        <td>viva0</td>
+                        <td>90.53</td>
+                        <td>314.0</td>
+                        <td>28426.420000000002</td>
+                    </tr> 
+                    <tr>
+                        <td>redhold0</td>
+                        <td>208.57</td>
+                        <td>127.0</td>
+                        <td>26488.39</td>
+                    </tr> 
+                    <tr>
+                        <td>quo lux0</td>
+                        <td>103.85</td>
+                        <td>208.0</td>
+                        <td>21600.8</td>
+                    </tr> 
+                    <tr>
+                        <td>it0</td>
+                        <td>169.89</td>
+                        <td>125.0</td>
+                        <td>21236.25</td>
+                    </tr> 
+                    <tr>
+                        <td>fintone0</td>
+                        <td>175.14</td>
+                        <td>121.0</td>
+                        <td>21191.94</td>
+                    </tr> 
+                    <tr>
+                        <td>cardify0</td>
+                        <td>161.44</td>
+                        <td>123.0</td>
+                        <td>19857.12</td>
+                    </tr> 
+                    <tr>
+                        <td>ronstring0</td>
+                        <td>283.9</td>
+                        <td>66.0</td>
+                        <td>18737.399999999998</td>
+                    </tr> 
+                    <tr>
+                        <td>trippledex0</td>
+                        <td>36.4</td>
+                        <td>332.0</td>
+                        <td>12084.8</td>
+                    </tr> 
+                    <tr>
+                        <td>bigtax0</td>
+                        <td>172.76</td>
+                        <td>62.0</td>
+                        <td>10711.119999999999</td>
+                    </tr> 
+                    <tr>
+                        <td>greenlam0</td>
+                        <td>129.05</td>
+                        <td>68.0</td>
+                        <td>8775.400000000001</td>
+                    </tr> 
+                    <tr>
+                        <td>ronstring0</td>
+                        <td>82.44</td>
+                        <td>82.0</td>
+                        <td>6760.08</td>
+                    </tr> 
+                    <tr>
+                        <td>stringtough0</td>
+                        <td>39.22</td>
+                        <td>169.0</td>
+                        <td>6628.179999999999</td>
+                    </tr> 
+                    <tr>
+                        <td>pannier0</td>
+                        <td>14.03</td>
+                        <td>435.0</td>
+                        <td>6103.049999999999</td>
+                    </tr> 
+                    <tr>
+                        <td>kanlam0</td>
+                        <td>21.17</td>
+                        <td>288.0</td>
+                        <td>6096.960000000001</td>
+                    </tr> 
+                    <tr>
+                        <td>tampflex0</td>
+                        <td>93.66</td>
+                        <td>64.0</td>
+                        <td>5994.24</td>
+                    </tr> 
+                    <tr>
+                        <td>transcof0</td>
+                        <td>160.68</td>
+                        <td>19.0</td>
+                        <td>3052.92</td>
+                    </tr> 
+                    <tr>
+                        <td>konklab0</td>
+                        <td>80.92</td>
+                        <td>34.0</td>
+                        <td>2751.28</td>
+                    </tr>        </tbody>
             </table>
         </div>
     </section>
     <div class="made-with-love">
         Abner Martín Noj Hernández - 201801027
 </body>
-
 </html>
